[package]
name = "ram_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.6.2", features = [ "runtime-actix-rustls", "mysql" ]}
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"